# ask_for_help

./: README.md
q1/c++/: CMakeLists.txt  control_law.hpp  field_oriented_controller.cpp  field_oriented_controller.hpp  main.cpp  motor.cpp  motor.hpp  resistance_measurement_controller.cpp  resistance_measurement_controller.hpp  self_controller.cpp  self_controller.hpp
q1/rust/foc-controller-rust/: Cargo.toml
q1/rust/foc-controller-rust/src/: controllaw.rs  foc.rs  main.rs  motor.rs  motor2.rs  motor3.rs  res.rs
